# carrier_ros

./: LICENSE  README.md
.github/workflows/: pages.yml
carrier_ros/: CMakeLists.txt  package.xml
carrier_ros_bringup/: CMakeLists.txt  package.xml  setup.py
carrier_ros_bringup/config/: motion.yaml
carrier_ros_bringup/launch/: carrier_ros_indoor.launch  carrier_ros_motor.launch  carrier_ros_oudoor.launch  carrier_ros_outdoor.launch  carrier_ros_remote.launch  carrier_ros_robot.launch  carrier_ros_robot2.launch  carrier_ros_robot_test.launch  carrier_ros_rviz.launch  carrier_ros_sensor.launch  carrier_ros_simulation.launch  rviz.launch  test.launch
carrier_ros_bringup/launch/include/: description.launch.xml
carrier_ros_bringup/nodes/: carrier_ros_motor_node.py
carrier_ros_bringup/scripts/: build.sh  create_udev_rules.sh
carrier_ros_bringup/src/carrier_ros_bringup/: __init__.py
carrier_ros_description/: CMakeLists.txt  package.xml
carrier_ros_description/meshes/bases/: caster_back_left_link.STL  caster_back_right_link.STL  front_camera_bottom_screw_frame.STL  left_camera_bottom_screw_frame.STL  left_scan.STL  right_camera_bottom_screw_frame.STL  right_scan.STL
carrier_ros_description/meshes/sensors/: front_ir_camera.STL  imu_link.STL  left_scan.STL  right_scan.STL
carrier_ros_description/meshes/wheels/: wheel_left_link.STL  wheel_right_link.STL
carrier_ros_description/urdf/: _d435.urdf.xacro  _usb_plug.urdf.xacro  carrier_ros.urdf.g2.xacro
carrier_ros_gazebo/: CMakeLists.txt  package.xml
carrier_ros_gazebo/launch/: carrier_ros_empty_world.launch  carrier_ros_erica.launch  carrier_ros_gazebo_rviz.launch  carrier_ros_turtlebot3_house.launch  carrier_ros_turtlebot3_world.launch
carrier_ros_gazebo/sdf/: carrier_ros.gazebo.xacro
carrier_ros_gripper/: CMakeLists.txt  package.xml
carrier_ros_gripper/include/: dynamixel_workbench_controllers.h
carrier_ros_gripper/launch/: gripper.launch
carrier_ros_interface/carrier_ros_interface/: CMakeLists.txt  package.xml
carrier_ros_interface/carrier_ros_msg/: CMakeLists.txt  package.xml
carrier_ros_interface/carrier_ros_msg/msg/: BatteryOne.msg  BatteryTwo.msg
carrier_ros_interface/carrier_ros_relay/: CMakeLists.txt  package.xml
carrier_ros_interface/carrier_ros_relay/launch/: carrier_ros_relay.launch  relay.launch
carrier_ros_interface/carrier_ros_relay/src/: excute_indoor_launch.py  excute_outdoor_launch.py  node_shutdown.py
carrier_ros_interface/carrier_ros_srv/: CMakeLists.txt
carrier_ros_interface/carrier_ros_srv/srv/: DroneStart.srv  DroneStatus.srv  RobotStart.srv  RobotStatus.srv
carrier_ros_map_export/: CMakeLists.txt  package.xml
carrier_ros_map_export/include/carrier_ros_map_export/: carrier_ros_map_export.h
carrier_ros_map_export/launch/: carrier_ros_map.launch  carrier_ros_map_transform.launch
carrier_ros_map_export/maps/: map.yaml
carrier_ros_map_export/src/: image_loader.cpp  main.cpp  map_export.cpp
carrier_ros_message/carrier_ros_msg/: CMakeLists.txt  package.xml
carrier_ros_message/carrier_ros_msg/msg/: Battery.msg
carrier_ros_navigation/: CMakeLists.txt  package.xml
carrier_ros_navigation/launch/: amcl.launch  carrier_ros_dual_ekf_navsat.launch  carrier_ros_dual_ekf_navsat_test.launch  carrier_ros_navsat.launch  carrier_ros_outdoor_nav.launch  eric_a_configuration.launch  move_base.launch
carrier_ros_navigation/launch/indoor/: amcl.launch  carrier_ros_indoor_configuration.launch  carrier_ros_indoor_nav.launch  eric_a_configuration.launch  indoor_move_base.launch
carrier_ros_navigation/nodes/: carrier_ros_goal.py  eric_a_goal.py  init_pose.py
carrier_ros_navigation/param/: costmap_common_params.yaml  dual_ekf_navsat_example.yaml  dual_ekf_navsat_test1.yaml  dual_ekf_navsat_test2.yaml  dwa_local_planner_params.yaml  ekf_localization.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml  test_costmap_common_params.yaml  test_global_costmap_params.yaml  test_local_costmap_params.yaml
carrier_ros_navigation/param/indoor/: costmap_common_params.yaml  dwa_local_planner_params.yaml  ekf_localization.yaml
carrier_ros_navigation/rviz/: carrier_ros_indoor.rviz  carrier_ros_navigation.rviz  carrier_ros_outdoor.rviz  test.rviz
carrier_ros_navigation/src/: carrier_ros_nav_interface.cpp
carrier_ros_perception/: CMakeLists.txt  package.xml
carrier_ros_perception/include/carrier_ros_perception/: carrier_ros_floor_detection.h  carrier_ros_obstacle_detect.h  carrier_ros_sensor_fusion.h  k_means.hpp  test.h
carrier_ros_perception/launch/: carrier_ros_env_perception.launch  carrier_ros_floor_detection.launch  carrier_ros_obstacle_detection.launch  carrier_ros_sensor_fusion.launch  carrier_ros_sensor_fusion_test.launch
carrier_ros_perception/rviz/: carrier_ros_perception.rviz
carrier_ros_perception/src/: carrier_ros_env_perception.cpp  carrier_ros_floor_detection.cpp  carrier_ros_obstacle_detect.cpp  carrier_ros_sensor_fusion.cpp  k_means.cpp  main.cpp  test.cpp  test2.cpp
carrier_ros_sensor/carrier_ros_IMU/: CMakeLists.txt  package.xml
carrier_ros_sensor/carrier_ros_IMU/launch/: carrier_ros_imu.launch
carrier_ros_sensor/carrier_ros_IMU/src/: iahrs_driver.cpp  imu_heading.cpp
carrier_ros_sensor/carrier_ros_camera/: CMakeLists.txt  package.xml
carrier_ros_sensor/carrier_ros_camera/launch/: carrier_ros_camera.launch  carrier_ros_front_camera.launch  carrier_ros_left_camera.launch  carrier_ros_multiple_camera.launch  carrier_ros_right_camera.launch  test.launch
carrier_ros_sensor/carrier_ros_gps_system2/carrier_ros_gps_system/: package.xml
carrier_ros_sensor/carrier_ros_lidar/: CMakeLists.txt  package.xml
carrier_ros_sensor/carrier_ros_lidar/launch/: carrier_ros_lidar.launch
carrier_ros_sensor/carrier_ros_sensor/: CMakeLists.txt  package.xml
carrier_ros_slam/: CMakeLists.txt  package.xml
carrier_ros_slam/launch/: carrier_ros_gmapping.launch
carrier_ros_slam/map/: station_map.pgm  station_map.yaml
carrier_ros_teleop/: CMakeLists.txt  package.xml
docs/: index.html  style.css
(+34 files in other folders)
