<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros</name>
  <version>0.0.0</version>
  <description>carrier_ros metapackage</description>
  <author email="kimjh9813@naver.com">jeonghan</author>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>carrier_ros_bringup</exec_depend>
  <exec_depend>carrier_ros_description</exec_depend>
  <exec_depend>carrier_ros_gazebo</exec_depend>
  <exec_depend>carrier_ros_interface</exec_depend>
  <!-- <exec_depend>carrier_ros_map_export</exec_depend> -->
  <exec_depend>carrier_ros_navigation</exec_depend>
  <exec_depend>carrier_ros_perception</exec_depend>
  <exec_depend>carrier_ros_sensor</exec_depend>
  <exec_depend>carrier_ros_slam</exec_depend>
  <exec_depend>carrier_ros_teleop</exec_depend>
  <export><metapackage/></export>
</package>
