<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_bringup</name>
  <version>2.2.1</version>
  <description>The carrier_ros_bringup package</description>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>cmake_modules</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>carrier_ros_msg</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
