<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_description</name>
  <version>0.0.0</version>
  <description>The carrier_ros_description package</description>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
</package>
