<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_perception</name>
  <version>0.0.0</version>
  <description>The carrier_ros_perception package</description>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
