<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_perception</name>
  <version>0.0.0</version>
  <description>The carrier_ros_perception package</description>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>

</package>
