<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_slam</name>
  <version>1.2.6</version>
  <description>
    The carrier_ros_slam package
  </description>
  <author email="kimjh9813@naver.com">jeonghan</author>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>  
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>carrier_ros_bringup</exec_depend>
</package>
