<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_relay</name>
  <version>0.0.0</version>
  <description>The carrier_ros_relay package</description>
  <maintainer email="yad05020@naver.com">hayeon</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
