<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_msg</name>
  <version>0.0.0</version>
  <description>carrier_ros message metapackage</description>
  <author email="kimjh9813@naver.com">jeonghan</author>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>  
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
