<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_lidar</name>
  <version>1.0.1</version>
  <description>The ROS device driver for YDLIDAR LIDARS</description>
  <maintainer email="dev@eaibot.com">EAIBOT Team</maintainer>
  <license>MIT</license>
  <author email="dev@eaibot.com">EAIBOT Team</author>>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
