<?xml version="1.0"?>
<package format="2">
  <name>carrier_ros_sensor</name>
  <version>0.0.0</version>
  <description>carrier_ros sensor metapackage</description>
  <author email="kimjh9813@naver.com">jeonghan</author>
  <maintainer email="kimjh9813@naver.com">jeonghan</maintainer>  
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>carrier_ros_imu</exec_depend>
  <!-- <exec_depend>carrier_ros_lidar</exec_depend> -->
  <export><metapackage/></export>
</package>
